# multitouch

./: AUTHORS  BUGS  CMakeLists.txt  INSTALL  NEWS  README  TODO
doc/module/: ModuleDeveloperGuide.tex
doc/module/chapters/: Inputs.tex  Introduction.tex  Modules.tex  Outputs.tex  ProcessingEngines.tex
include/: CMakeLists.txt  multitouch.h
src/: CMakeLists.txt
src/libmultitouch/: CMakeLists.txt  chain.c  device.c  event.c  input.c  output.c  packet.c
